[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/WebRes_IMG_16770-450.width-1280.format-jpeg.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/CoinHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/dogicapixelbold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/ScoreScreen.gd" type="Script" id=4]
[ext_resource path="res://assets/dogicapixel.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 43
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 4
outline_color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/dogicapixel.ttf"

[sub_resource type="DynamicFont" id=6]
outline_size = 3
outline_color = Color( 0.0196078, 0.00392157, 0.00392157, 1 )
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/dogicapixel.ttf"

[sub_resource type="DynamicFont" id=8]
outline_size = 3
outline_color = Color( 0.0392157, 0.00392157, 0.00392157, 1 )
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://assets/dogicapixel.ttf"

[sub_resource type="DynamicFont" id=10]
outline_size = 3
outline_color = Color( 0.0352941, 0.00392157, 0.00392157, 1 )
font_data = SubResource( 9 )

[node name="ScoreScreen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -4.0
margin_top = -2.0
margin_right = 1276.0
margin_bottom = 851.0
rect_scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 368.0
margin_top = 16.0
margin_right = 613.0
margin_bottom = 96.0
custom_fonts/normal_font = SubResource( 1 )
text = "Score:"

[node name="Next level" type="Button" parent="."]
margin_left = 384.0
margin_top = 536.0
margin_right = 578.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 11 )
text = "Next Level"

[node name="TotalScoreText" type="RichTextLabel" parent="."]
margin_left = 368.0
margin_top = 376.0
margin_right = 672.0
margin_bottom = 416.0
custom_fonts/normal_font = SubResource( 2 )
text = "Total Score:"

[node name="LevelScoreText" type="RichTextLabel" parent="."]
anchor_right = 3.016
anchor_bottom = 4.842
margin_left = 368.0
margin_top = 248.0
margin_right = 520.36
margin_bottom = 106.32
custom_fonts/normal_font = SubResource( 3 )
text = "Level Score: "

[node name="TimeText" type="RichTextLabel" parent="."]
margin_left = 432.0
margin_top = 128.0
margin_right = 694.0
margin_bottom = 168.0
custom_fonts/normal_font = SubResource( 4 )
text = "Time: "

[node name="Time" type="Label" parent="."]
margin_left = 456.0
margin_top = 176.0
margin_right = 624.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 6 )

[node name="LevelScore" type="Label" parent="."]
margin_left = 448.0
margin_top = 304.0
margin_right = 600.0
margin_bottom = 344.0
custom_fonts/font = SubResource( 8 )

[node name="TotalScore" type="Label" parent="."]
margin_left = 448.0
margin_top = 432.0
margin_right = 592.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 10 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CoinHUD" parent="CanvasLayer" instance=ExtResource( 2 )]

[connection signal="pressed" from="Next level" to="." method="_on_Next_level_pressed"]
